# django-docker-starter

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  production-start.sh  pyproject.toml
a_core/: celery.py  settings.py  urls.py
templates/: home.html
