[project]
name = "django-docker-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django",
    "pillow",
    "django-cleanup",
    "django-allauth",
    "django-htmx",
    "psycopg2-binary>=2.9.9",
    "redis>=5.1.0",
    "celery>=5.4.0",
    "django-celery-results>=2.5.1",
    "flower>=2.0.1",
    "django-celery-beat>=2.7.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.7.0",
    "django-environ>=0.11.2",
    "dj-database-url>=2.2.0",
]
