[project]
name = "django-docker-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-allauth>=65.0.2",
    "django-cleanup>=9.0.0",
    "django-environ>=0.11.2",
    "django-htmx>=1.19.0",
    "django>=5.1.1",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.9",
    "whitenoise>=6.7.0",
]
